<resources>
    <string name="app_name">Banco Digital</string>

    <!-- BottomSheet -->
    <string name="textTittleBottomSheet">Attention</string>
    <string name="textButtonBottomSheet">Understood</string>

    <!-- Generic -->
    <string name="enter_name">Enter your name.</string>
    <string name="enter_email">Enter your e-mail.</string>
    <string name="email_success">E-mail sent successfully.</string>
    <string name="mobile_number">Enter your mobile phone number.</string>
    <string name="create_password">Create your password.</string>
    <string name="confirm_password">Confirm your password.</string>
    <string name="create_error">Error registering, enter valid information.</string>
    <string name="create_success">Registration completed successfully.</string>
    <string name="email_or_password_error">Invalid e-mail or password.</string>
    <string name="generic_error">An error occurred, try again later.</string>

    <!-- Login -->
    <string name="enter_password">Enter your password.</string>
    <string name="email_hint">Enter your e-mail</string>
    <string name="local_password">Password</string>
    <string name="login_bottom">Login</string>
    <string name="create_account">Create account</string>
    <string name="recover_account">Recover Account</string>

    <!--    Errors Firebase Authentication-->
    <string name="account_not_registered_register_fragment">No account found with this e-mail.</string>
    <string name="invalid_email_register_fragment">Enter a valid e-mail.</string>
    <string name="invalid_password_register_fragment">Invalid password, try again.</string>
    <string name="email_in_use_register_fragment">This e-mail is already in use.</string>
    <string name="strong_password_register_fragment">Enter a stronger password.</string>

    <!--    Recover-->
    <string name="recover_password">Recover password</string>
    <string name="recover_link">Enter your e-mail and click submit to receive a password recover link</string>
    <string name="bottom_send">Send</string>

    <!--    Create account-->
    <string name="local_name">Name</string>
    <string name="local_e_mail">E-mail</string>
    <string name="local_mobile_phone">Mobile phone</string>
    <string name="local_mobile_phone_invalid">Invalid mobile phone</string>
    <string name="enter_mobile_phone">Enter your mobile phone</string>
    <string name="local_confirm_password">Confirm your password</string>
    <string name="deposit">Deposit</string>
    <string name="cell_phone_recharge">Cell Phone recharge</string>
    <string name="statement">statement</string>
    <string name="transfer">transfer</string>
    <string name="profile">profile</string>
    <string name="balance">Balance</string>
    <string name="lasted_activities">Lasted activities</string>
    <string name="see_more">See more</string>
    <string name="todo">TODO</string>
    <string name="_1_254_00">€ 1.254.00</string>


</resources>