<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".presenter.auth.register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/create_account"
                    android:textColor="@color/color_default" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_name"
                android:textColor="@color/color_default"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="100dp" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Theme.EditText"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="8dp"
                android:drawableTint="@color/color_default"
                android:hint="@string/enter_name"
                android:padding="8dp"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="126dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_e_mail"
                android:layout_marginTop="16dp"
                android:textColor="@color/color_default"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="180dp" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Theme.EditText"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:drawableTint="@color/color_default"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="199dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_mobile_phone"
                android:layout_marginTop="16dp"
                android:textColor="@color/color_default"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="249dp" />

            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/edtMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Theme.EditText"
                android:drawableStart="@drawable/ic_mobile"
                android:drawablePadding="8dp"
                android:drawableTint="@color/color_default"
                android:text="@string/enter_mobile_phone"
                android:inputType="phone"
                android:padding="8dp"
                tools:layout_editor_absoluteX="24dp"
                app:mask="(+##) ### ### ###"
                tools:layout_editor_absoluteY="268dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_password"
                android:layout_marginTop="16dp"
                android:textColor="@color/color_default"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="321dp" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Theme.EditText"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="8dp"
                android:drawableTint="@color/color_default"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="8dp"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="345dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_confirm_password"
                android:layout_marginTop="16dp"
                android:textColor="@color/color_default"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="396dp" />

            <EditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Theme.EditText"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="8dp"
                android:drawableTint="@color/color_default"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="8dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="415dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn"
                android:layout_marginTop="16dp"
                android:text="@string/bottom_send"
                app:backgroundTint="@null"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="465dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/color_default"
                android:visibility="invisible"
                tools:visibility="visible" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>